# TakeBridge-S3

./: .gitignore  CHANGES_SUMMARY.md  DATA_FLOW_ANALYSIS.md  FRONTEND_FIX.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_MCP_CONTRACT.md  FRONTEND_MCP_OAUTH_GUIDE.md  MCP_AUTH_INTEGRATION.md  MCP_DB_INTEGRATION.md  ORCHESTRATOR_INTEGRATION_SUMMARY.md  Procfile  QUICK_MCP_OAUTH_BUTTON.md  QUICK_START.md  QUICK_TEST.md  README.md  REFACTOR_SUMMARY.md  REPL_check_search_results.py  STREAMING_GUIDE.md  Standalone_MCP_Agent_Checklist.md  Standalone_MCP_Plan.md  TASK_INPUT_BOX_GUIDE.md  TESTING_GUIDE.md  alembic.ini  api_start.sh  flow_doc.md  main.py  mcp-agent-refactor.plan.md  mcp_planner.md  pre-built-script.txt  probe_tools.py  pyproject.toml  test_endpoints.sh  test_orchestrator_integration.py  test_vm_client.py  tool_output_samples.yaml  tool_output_schemas.generated.json  verify_logging_structure.py  verify_slim_transform.py
alembic/: env.py
archive/: MCP_Multi_Tenant_Implementation_Plan.md  MIGRATION_COMPLETE.md  planner_prompt_overhaul_plan.md  planner_runtime_cleanup.plan.md
computer_use_agent/: agent_s.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  INTEGRATION_GUIDE.md  SSE_EVENTS_REFERENCE.md  adding_tools_and_providers.md  agent_states.schema.draft.json  composio_oauth_prequeue_checks.md  customizing_tool_parameters.md  db_modularization_sql_safety_plan.md  google_oauth_setup_guide.md  latest_frontend_connection_guide.md  mcp_agent_extension_guide.md  oauth_refresh_required_contract.md  run_events_push_vs_poll.md  runtime_decoupling_plan.md  self_hosted_mcp_architecture.md  tool_output_schema_introspection_plan.md  user_metadata_plan.md
framework/: agent_s.py
mcp_agent/: README.md  __init__.py  action_registry.py  actions.py  compat.py  dev.py  env_sync.py  high_signal.py  mcp_agent.py  mcp_client.py  oauth.py  registry.py  tool_schemas.py  types.py  user_identity.py
orchestrator_agent/: README.md  __init__.py  __main__.py  bridges.py  capabilities.py  composed_plan.py  composer.py  data_types.py  exceptions.py  runtime.py  summarizer.py  system_prompt.py  translator.py
public/: oauth-success.html
scripts/: backfill_user_metadata.py  build_tool_output_schemas.py  check_sql_safety.py  check_tool_search.py  complete_gmail_oauth.py  delete_gmail_account.py  disconnect_provider.py  fix_gmail_auth.py  generate_oauth_url.py  generate_test_token.py  generate_tool_output_schemas.py  get_slack_oauth_link.py  inspect_auth_config.py  inspect_composio_account.py  list_auth_configs.py  orchestrate_task.py  poll_screenshot.py  probe_tool_outputs.py  probe_tools.py  run_dev_mcp_task.py  run_dev_orchestrator.py  show_triage_csv.py  simulate_drive_changes.py  startup.sh  test_code_agent_output_checks.py  test_composio_manual_credentials.py  test_drive_flow.sh  test_drive_stage.py  test_inspect_tool_output.py  test_orchestrator_data_flow.py  test_sandbox_code.py  test_search_output.py  test_tool_call.py  trace_execute_mcp_task.py
server/: schemas.py
shared/: baseten_client.py  deepseek_client.py  hierarchical_logger.py  latency_logger.py  llm_client.py  llm_defaults.py  llm_request_registry.py  logger.py  oai_client.py  openrouter_client.py  run_context.py  settings.py  stdio.py  streaming.py  supabase_client.py  text_utils.py  token_cost_tracker.py
shared/db/: sql.py  (+13 more)
tests/: check_status.py  conftest.py  db_ping.py  debug_oauth.py  disconnect_gmail.py  inspect_auth.py  send_gmail_email.py  (+1 more)
(+322 files in other folders)
