[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "takebridge-orchestrator"
version = "0.1.0"
description = "Agent orchestration service for UI automation with worker, grounding, and code agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "TakeBridge" }
]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "openai>=1.30.0",
  "httpx>=0.27.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "numpy>=1.24.0",
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "opencv-python>=4.8.0",
  "pyautogui>=0.9.54",
  "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.3.0",
  "ruff>=0.4.0",
  "pytest>=7.4.0",
  "mypy>=1.8.0",
]

[project.scripts]
takebridge-server = "framework.api.server:app"

[tool.hatch.build.targets.wheel]
packages = ["framework"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]
